--- a/styles/style.css
+++ b/styles/style.css
@@ -14,12 +14,58 @@
   min-height: 600px;
   max-height: 756px;
   /* выше установили ограничения для секции */
+  display: flex;
+  background-color:  #f2f2f2;
+  position: relative;
 }
-
+.logo {
+  width: 183px;
+  height: 32px;
+}
+.logo_place_header {
+  background-image: url(/Users/4739372/dev/how-to-learn/images/logo_place_header.svg);
+  position: absolute;
+  margin: 30px 0 0 64px;
+}
+.header__title {
+  margin-top: 0;
+  margin-bottom: 0;
+  line-height: 96px;
+  width: 730px;
+  margin: auto 64px;
+  z-index: 2;
+  align-self: center;
+  font-size: 102px;
+}
+.header__subtitle {
+  margin: 0;
+  width: 388px;
+  z-index: 2;
+  line-height: 25px;
+  font-weight: normal;
+  font-size: 18px;
+  position: absolute;
+  left: 64px;
+  bottom: 30px;
+}
+.header__main-illustration {
+  background-image: url(/Users/4739372/dev/how-to-learn/images/header-image.png);
+  background-size: cover;
+  width: 765px;
+  height: 608px;
+  position: absolute;
+  bottom:0px;
+  right:0px;
+  z-index: 1;
+}
 /* ниже мы привели пример двух селекторов, чтобы вы вспомнили запись элемента */
 .header__square-pic {
   height: 568px;
   width: 568px;
+  background: #2f80ed;
+  position: absolute;
+  top: 64px;
+  right: 0;
 }
 
 /* и элемента с модификатором вида ключ-значение */
