--- a/styles/style.css
+++ b/styles/style.css
@@ -68,6 +68,68 @@
   right: 0;
 }
 
+.description {
+
+}
+
+.two-columns {
+  margin: 100px auto 0;
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: nowrap;
+}
+
+.two-columns__brief {
+  margin: 0;
+  color: #2f80ed;
+  width: 175px;
+  line-height: 1.2;
+  font-size: 18px;
+  font-weight: normal;
+}
+
+.two-columns__main-text {
+  margin: 0;
+  width: 80%;
+  min-width: 784px;
+  line-height: 34px;
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.two-columns__paragraph {
+  margin: 0;
+  margin-bottom: 30px;
+}
+
+.two-columns__paragraph:nth-of-type(3n) {
+  margin-bottom: 0;
+}
+
+.two-columns__span-accent {
+  font-weight: bold;
+  line-height: 34px;
+  font-size: 24px;
+}
+
+.digits {
+  display: flex;
+  padding-top: 100px;
+}
+
+.section-title {
+  width: 60%;
+}
+
+.section-subtitle {
+  width: 60%;
+}
+
+.table {
+  margin: 0 auto 20px;
+  width: 1100px;
+}
 /* и элемента с модификатором вида ключ-значение */
 .table__cell_theme_dark {
   width: 200px;
