--- a/styles/style.css
+++ b/styles/style.css
@@ -25,7 +25,7 @@
 }
 
 .logo_place_header {
-  background-image: url(/Users/4739372/dev/how-to-learn/images/logo_place_header.svg);
+  background-image: url(../images/logo_place_header.svg);
   position: absolute;
   margin: 30px 0 0 64px;
 }
@@ -54,7 +54,7 @@
 }
 
 .header__main-illustration {
-  background-image: url(/Users/4739372/dev/how-to-learn/images/header-image.png);
+  background-image: url(../images/header-image.png);
   background-size: cover;
   width: 765px;
   height: 608px;
@@ -168,7 +168,7 @@
 
 .feynman {
   background-color: #f2f2f2;
-  background-image: url(/Users/4739372/dev/how-to-learn/images/feynman.png);
+  background-image: url(../images/feynman.png);
   background-size: 867px 637px;
   background-position: left bottom;
   background-repeat: no-repeat;
@@ -280,7 +280,7 @@
 }
 
 .logo_place_footer {
-  background-image: url(/Users/4739372/dev/how-to-learn/images/logo_place_footer.svg);
+  background-image: url(../images/logo_place_footer.svg);
   background-size: cover;
   height: 35px;
   width: 183px;
